Closed Bug 1955912 Opened 26 days ago Closed 26 days ago

Crash in [@ nsAlertsService::Teardown]

Categories

(Toolkit :: Alerts Service, defect)

Unspecified
All
defect

Tracking

()

RESOLVED FIXED
138 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox136 --- unaffected
firefox137 --- unaffected
firefox138 --- fixed

People

(Reporter: aryx, Assigned: saschanaz)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

23 crashes from 12 installs of Firefox 138.0a1, both Windows and Linux are affected.

Crash report: https://crash-stats.mozilla.org/report/index/dd3a3fde-a878-4462-aeee-29a0e0250323

Reason:

EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames:

0  xul.dll  nsAlertsService::Teardown()  toolkit/components/alerts/nsAlertsService.cpp:258
1  xul.dll  mozilla::KillClearOnShutdown(mozilla::ShutdownPhase)  xpcom/base/ClearOnShutdown.cpp:55
1  xul.dll  mozilla::AppShutdown::AdvanceShutdownPhaseInternal(mozilla::ShutdownPhase, bo...  xpcom/base/AppShutdown.cpp:419
2  xul.dll  mozilla::AppShutdown::AdvanceShutdownPhase(mozilla::ShutdownPhase, char16_t c...  xpcom/base/AppShutdown.cpp:459
2  xul.dll  mozilla::ShutdownXPCOM(nsIServiceManager*)  xpcom/build/XPCOMInit.cpp:684
3  xul.dll  NS_ShutdownXPCOM(nsIServiceManager*)  xpcom/build/XPCOMInit.cpp:599
3  xul.dll  ScopedXPCOMStartup::~ScopedXPCOMStartup()  toolkit/xre/nsAppRunner.cpp:2009
4  xul.dll  mozilla::DefaultDelete<ScopedXPCOMStartup>::operator()(ScopedXPCOMStartup*) c...  mfbt/UniquePtr.h:460
4  xul.dll  mozilla::UniquePtr<ScopedXPCOMStartup, mozilla::DefaultDelete<ScopedXPCOMStar...  mfbt/UniquePtr.h:302
4  xul.dll  mozilla::UniquePtr<ScopedXPCOMStartup, mozilla::DefaultDelete<ScopedXPCOMStar...  mfbt/UniquePtr.h:272
Flags: needinfo?(krosylight)

Set release status flags based on info from the regressing bug 1953906

nsXULAlerts already has ClearOnShutdown and calling nsXULAlerts::GetInstance again only makes it immediately freed with nullptr being returned.

Assignee: nobody → krosylight
Status: NEW → ASSIGNED
Flags: needinfo?(krosylight)
See Also: → 1955940
Pushed by krosylight@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/271538be2968 Return early when no backend exists r=jstutte
Status: ASSIGNED → RESOLVED
Closed: 26 days ago
Resolution: --- → FIXED
Target Milestone: --- → 138 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: