Bug 1955912 - Return early when no backend exists r=jstutte

nsXULAlerts already has ClearOnShutdown and calling nsXULAlerts::GetInstance again only makes it immediately freed with nullptr being returned.

Differential Revision: https://phabricator.services.mozilla.com/D242691